--- a/src/Checkout.css
+++ b/src/Checkout.css
@@ -16,3 +16,9 @@
   padding: 10px;
   border-bottom: 1px solid lightgray;
 }
+
+@media only screen and (max-width: 744px) {
+  .checkout {
+    display: inline;
+  }
+}
