--- a/src/Header.css
+++ b/src/Header.css
@@ -69,3 +69,9 @@
   color: #cd9042;
   margin-bottom: 12px;
 }
+
+@media only screen and (max-width: 744px) {
+  .header__option {
+    display: none;
+  }
+}
