--- a/src/Home.css
+++ b/src/Home.css
@@ -19,3 +19,9 @@
   margin-left: 5px;
   margin-right: 5px;
 }
+
+@media only screen and (max-width: 700px) {
+  .home__row {
+    padding-top: 50px;
+  }
+}
