--- a/src/Header.css
+++ b/src/Header.css
@@ -4,6 +4,7 @@
   align-items: center;
   background-color: #131921;
   position: sticky;
+  width: 100%;
   top: 0;
   z-index: 100;
 }
@@ -70,8 +71,18 @@
   margin-bottom: 12px;
 }
 
-@media only screen and (max-width: 744px) {
+@media only screen and (max-width: 722px) {
+  .header {
+    max-width: 100%;
+  }
   .header__option {
     display: none;
+  }
+
+  .header__logo {
+    width: 60px;
+    object-fit: contain; /* aspect ratio */
+    margin: 0 10px;
+    margin-top: 9px;
   }
 }
