--- a/src/Product.css
+++ b/src/Product.css
@@ -5,8 +5,8 @@
   justify-content: flex-end;
   margin: 10px;
   padding: 20px;
-  width: 100%;
-  min-width: 100px;
+  /* width: 100%; */
+  /* min-width: 100px; */
   max-height: 400px;
   background-color: white;
   z-index: 1;
